# paperreel

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  rtx5090.yaml
examples/tiny_sample/: README.md
pdf2lesson-video-tw/: README.md  pyproject.toml
pdf2lesson-video-tw/configs/: default.yaml  dryrun.yaml
pdf2lesson-video-tw/examples/tiny_sample/: make_tiny_pdf.py
pdf2lesson-video-tw/src/pdf2lesson/: cli.py  config.py  hashing.py  models.py  state.py
pdf2lesson-video-tw/src/pdf2lesson/providers/: image_base.py  image_mock.py  llm_anthropic.py  llm_mock.py  tts_edge.py
pdf2lesson-video-tw/src/pdf2lesson/renderers/: ffmpeg_renderer.py
pdf2lesson-video-tw/src/pdf2lesson/renderers/templates/: summary_card.html  title_card.html
pdf2lesson-video-tw/src/pdf2lesson/stages/: build_outline.py  build_subtitles.py  ingest_pdf.py  render_visuals.py  synthesize_audio.py  write_script.py
pdf2lesson-video-tw/tests/: conftest.py  test_atomic_write.py  test_models.py  test_scene_graph_validation.py
src/paperreel/: __init__.py  cli.py  config.py  manifest.py  models.py  ocr.py  state.py
src/paperreel/audio/: __init__.py  voice_sample.py  zh_tw_normalize.py
src/paperreel/configs/: __init__.py  bigvram.yaml  default.yaml  highend_sketchbook.yaml  sketchbook.yaml
src/paperreel/providers/: image_base.py  image_sdxl.py  llm_anthropic.py  llm_base.py  llm_ollama.py  tts_base.py  tts_edge.py  tts_xtts.py
src/paperreel/renderers/: card_renderer.py  pdf_crop.py  sketchbook_renderer.py
src/paperreel/renderers/templates/: quote_card.html  teaching_card.html
src/paperreel/stages/: build_outline.py  build_scene_graph.py  build_sketchbook.py  concat_final.py  ingest_pdf.py  match_pdf_visuals.py  quality_check.py  render_segments.py  render_visuals.py  review.py  synthesize_audio.py  write_script.py
src/paperreel/utils/: doc_classify.py  duration.py  fact_extract.py  grounding.py  scene_budget.py  source_mapping.py  visual_inventory.py
src/pdf2lesson/: __init__.py  io_utils.py
src/pdf2lesson/providers/: tts_base.py  tts_mock.py
src/pdf2lesson/stages/: build_scene_graph.py  render_segments.py
src/pdf2lesson/utils/: text_cleaning.py
tests/: conftest.py  test_atomic_write.py  test_card_renderer.py  test_cli_voice.py  test_config_packaging.py  test_doc_classify.py  test_duration.py  test_fact_extract.py  test_grounding.py  test_ingest_ocr_and_figures.py  test_manifest_resume.py  test_match_pdf_visuals.py  test_models.py  test_quality_check_pdf_pages.py  test_scene_budget.py  test_scene_graph_validation.py  test_scene_id_normalization.py  test_sketchbook_pipeline.py  test_sketchbook_renderer.py  test_state_resume.py  test_tts_xtts.py  test_voice_sample.py  test_zh_tw_normalize.py
tests/_fakes/: __init__.py  image_fake.py  llm_fake.py  tts_fake.py
