[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperreel"
version = "0.1.0"
description = "PDF -> 繁體中文教學影片 pipeline (local-only models)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "paperreel team" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
# Local LLM via the Ollama daemon (qwen / llama / mistral / deepseek …).
# Install the daemon separately: https://ollama.com/download
ollama = ["ollama>=0.3"]

# Coqui XTTS v2 — multilingual local TTS. Pulls torch + the TTS library.
# First synth downloads ~1.8 GB of weights to ~/.local/share/tts.
xtts = ["TTS>=0.22", "torch>=2.2"]

# Stable Diffusion XL via 🤗 diffusers. Needs a CUDA GPU for any real
# throughput (CPU inference is minutes per frame).
sdxl = [
    "diffusers>=0.27",
    "transformers>=4.41",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "torch>=2.2",
]

# Convenience: every local backend at once.
all = [
    "ollama>=0.3",
    "TTS>=0.22",
    "diffusers>=0.27",
    "transformers>=4.41",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "torch>=2.2",
]

test = ["pytest>=8.0"]

[project.scripts]
paperreel = "paperreel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paperreel.renderers" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
