[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperreel"
version = "0.1.0"
description = "PDF -> 繁體中文教學影片 pipeline (local-only models)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "paperreel team" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
# Local LLM via the Ollama daemon (qwen / llama / mistral / deepseek …).
# Install the daemon separately: https://ollama.com/download
ollama = ["ollama>=0.3"]

# Coqui XTTS v2 — multilingual local TTS. Pulls torch + the maintained
# `coqui-tts` fork (the original `TTS` package on PyPI is pinned to
# Python <3.12, so we can't use it on the project's `requires-python`).
# `[codec]` pulls `torchcodec`, which PyTorch >= 2.9 needs for audio IO.
# `transformers<5` because coqui-tts 0.27 still imports
# `transformers.pytorch_utils.isin_mps_friendly` (removed in 5.x).
# `pypinyin` is needed for Chinese text-to-phoneme inside XTTS.
# First synth downloads ~1.8 GB of weights to ~/.local/share/tts.
# Set `COQUI_TOS_AGREED=1` to skip the interactive CPML license prompt
# the first time the model is fetched.
xtts = [
    "coqui-tts[codec]>=0.27",
    "transformers>=4.41,<5",
    "torchaudio>=2.2",
    "pypinyin>=0.50",
    "torch>=2.2",
]

# Stable Diffusion XL via 🤗 diffusers. Needs a CUDA GPU for any real
# throughput (CPU inference is minutes per frame). `transformers` is
# capped at <5 to stay compatible with `coqui-tts` when [xtts] and
# [sdxl] are installed together.
sdxl = [
    "diffusers>=0.27",
    "transformers>=4.41,<5",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "torch>=2.2",
]

# Optional OCR fallback for scanned / image-only PDFs. Requires the
# system `tesseract` binary plus per-language packs (e.g. apt install
# tesseract-ocr tesseract-ocr-chi-tra tesseract-ocr-chi-sim). Without
# this extra, pages with no extractable text are recorded as empty and
# flagged in the quality report.
ocr = [
    "pytesseract>=0.3",
]

# Convenience: every local backend at once.
all = [
    "ollama>=0.3",
    "coqui-tts[codec]>=0.27",
    "transformers>=4.41,<5",
    "torchaudio>=2.2",
    "pypinyin>=0.50",
    "diffusers>=0.27",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "torch>=2.2",
    "pytesseract>=0.3",
]

test = ["pytest>=8.0"]

[project.scripts]
paperreel = "paperreel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paperreel.renderers" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
